<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_weight="0.1"
        android:text="@string/cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginTop="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_weight="1.5"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"/>

    <LinearLayout
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempMinima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tempMaxima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">


        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/tempminflat"/>

        <TextView
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMin"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/tempmaxflat"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp" />

        <TextView
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMax"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>


    <TextView
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/descricao_clima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"/>

    <TextView
        android:layout_marginBottom="50dp"
        android:layout_weight="1.5"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"/>


</LinearLayout>
